--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,35 @@
-body {
-    background-image: url(../img/tkd-bg.jfif);
-    background-repeat: no-repeat;
-}
+.card-atlet {
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+  }
+  
+  .card-atlet:hover {
+    transform: translateY(-10px);
+  }
+  
+  .card-atlet img {
+    border-radius: 10px; /* Apply rounded corners but keep the image rectangular */
+  }
+  
+  .card-atlet ul {
+    padding-left: 0;
+  }
+  
+  .card-atlet ul li {
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #333;
+    background-color: #f8f9fa;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .cb-atlet {
+    padding: 20px;
+  }
+  
+  .cb-atlet ul {
+    margin-top: 20px;
+  }
+  
